Added license information

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "react-haapi-demo",
+  "description": "A demo implementation of the Hypermedia Authentication API in a React app",
+  "license": "Apache-2.0",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
