Update dependencies and idsvr version

--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "private": true,
   "dependencies": {
     "@curity/identityserver-haapi-web-driver": "^1.1.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "pretty-print-json": "^1.2.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "pretty-print-json": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.53.0",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.59.3",
+    "web-vitals": "^3.3.0",
+    "json5": ">=2.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
