--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "private": true,
   "dependencies": {
     "@curity/identityserver-haapi-web-driver": "^1.1.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "pretty-print-json": "^1.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-scripts": "5.0.1",
-    "sass": "^1.59.3",
-    "web-vitals": "^3.3.0",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "pretty-print-json": "^3.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.77.6",
+    "web-vitals": "^4.2.1",
     "json5": ">=2.2.3"
   },
   "scripts": {
@@ -23,6 +23,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!pretty-print-json)"
+    ]
   },
   "eslintConfig": {
     "extends": [
