--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@curity/identityserver-haapi-web-driver": "^1.1.1",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
+    "@curity/identityserver-haapi-web-driver": "^1.2.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "pretty-print-json": "^3.0.1",
+    "pretty-print-json": "^3.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "^5.0.1",
-    "sass": "^1.77.6",
-    "web-vitals": "^4.2.1",
+    "sass": "^1.80.6",
+    "web-vitals": "^4.2.4",
     "json5": ">=2.2.3"
+  },
+  "overrides": {
+    "nth-check": "~2.1.1",
+    "postcss": "~8.4.47"
   },
   "scripts": {
     "start": "react-scripts start",
